<resources>
    <string name="app_name">Room1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">Password Room</string>
    <string name="powerBy">poweredByBlaBla</string>
    <string name="backgroundImageShape">backgroundImageShape</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="toSignUp">Don\'t have an account? Sign up!</string>
    <string name="loginBtn">Login</string>
    <string name="register">Register</string>
    <string name="toLogin">Already have an account? Log in!</string>
    <string name="signupBtn">Sign up</string>
    <string name="version">Version_Beta</string>
    <string name="sample">sample</string>
    <string name="favourite">favourite</string>
    <string name="content_description_favorite">content_description_favorite</string>
    <string name="search">search</string>
    <string name="content_description_search">content_description_search</string>
    <string name="more">more</string>
    <string name="content_description_more">content_description_more</string>
    <string name="add_btn">add_btn</string>
    <string name="web_name">web_name</string>
    <string name="web_url">Web Url</string>
    <string name="name">Name</string>
</resources>